@@ -7,9 +7,9 @@ from plone.app.registry.browser.controlpanel import RegistryEditForm
 
 class DropdownControlPanelForm(RegistryEditForm):
 
-    id = "DropdownControlPanel"
+    id = 'DropdownControlPanel'
     schema = IDropdownConfiguration
-    schema_prefix = "webcouturier.dropdownmenu.browser.interfaces.IDropdownConfiguration"
+    schema_prefix = 'webcouturier.dropdownmenu.browser.interfaces.IDropdownConfiguration'
 
     label = _(u"A dropdown menu configuration.", default=u"A dropdown menu configuration.")
     description = _(
