@@ -1,20 +1,20 @@
 <?xml version="1.0"?>
 <registry>
-	<records interface="webcouturier.dropdownmenu.browser.interfaces.IDropdownConfiguration" />	
-	
-	<records prefix="plone.resources/webcouturier.dropdownmenu"
-	          interface='Products.CMFPlone.interfaces.IResourceRegistry'>
-	    <value key="css">
-	      <element>++resource++dropdown.less</element>
-	    </value>
-	</records>
-	 <records prefix="plone.bundles/webcouturier.dropdownmenu"
-	            interface='Products.CMFPlone.interfaces.IBundleRegistry'>
-	    <value key="resources">
-	      <element>webcouturier.dropdownmenu</element>
-	    </value>
-	    <value key="depends">plone</value>
-	    <value key="enabled">True</value>
-	    <value key="compile">True</value>
-	  </records>
+  <records interface="webcouturier.dropdownmenu.browser.interfaces.IDropdownConfiguration" /> 
+  <records prefix="plone.resources/webcouturier.dropdownmenu"
+           interface='Products.CMFPlone.interfaces.IResourceRegistry'>
+    <value key="css">
+      <element>++plone++dropdown/dropdown.less</element>
+    </value>
+  </records>
+  <records prefix="plone.bundles/webcouturier.dropdownmenu"
+           interface='Products.CMFPlone.interfaces.IBundleRegistry'>
+    <value key="resources">
+      <element>webcouturier.dropdownmenu</element>
+    </value>
+    <value key="depends">plone</value>
+    <value key="enabled">True</value>
+    <value key="compile">True</value>
+    <value key="csscompilation">++plone++dropdown/webcouturier.dropdownmenu-compiled.css</value>
+  </records>
 </registry>
